# MARCO4

./: .gitignore  expert_only.ipynb  pyproject.toml  run_marco4.ipynb  setup.py
marco/: __init__.py  config.py  css.py  dempster_shafer.py  expert.py  main.py  mcu.py  size_resolution.py  utils.py
tests/: __init__.py  test_ds.py  test_expert.py  test_integration.py  test_mcu.py
